# ROS2_lecture_ya_camp

./: .gitignore  .ignore  README.md  TERMINOLOGY.md
.devcontainer/: Dockerfile  devcontainer.json
.obsidian/: workspace.json
1_demo/: demo1_environment.md  demo2_topics.md  demo3_services.md  demo4_tf2.md  demo5_nav2_architecture.md  demo6_moveit2_architecture.md  demo7_yolo_perception.md  demo8_llm_bridge_safety.md
1_lecture/: lecture_content.md  lecture_plan.md
2_cheatsheets/: ros2_cli.md  topics_services_actions.md  workspace_package.md
2_code/mini_project/: package.xml  setup.cfg  setup.py
2_code/mini_project/config/: system_params.yaml
2_code/mini_project/launch/: system.launch.py
2_code/params_launch_demo/: package.xml  setup.py
2_code/params_launch_demo/config/: params.yaml
2_code/params_launch_demo/launch/: demo.launch.py
2_code/params_launch_demo/params_launch_demo/: timed_talker.py
2_code/params_launch_demo/resource/: params_launch_demo
2_knowledge/: actions.md  colcon.md  dds_protocol.md  discovery.md  launch.md  lifecycle.md  llm_bridge.md  moveit2_bridge.md  nav2_bridge.md  nodes.md  packages.md  parameters.md  qos.md  rmw.md  robots_communication.md  ros2_control.md  ros_architecture.md  safety.md  services.md  simulation.md  subsystem.md  tf2.md  topics.md  urdf_xacro.md  workspace.md  yolo_bridge.md
2_practice/: 01_workspace.md  02_package.md  03_topic.md  04_service.md  05_action.md  06_launch.md  07_tf2.md  08_mini_project.md
3_Robot/TIAgo_humble/: README.md  TIAgo_configuration.md
3_Robot/TIAgo_humble/docs/: llm_bridge.md  (+13 more)
(+13 files in other folders)
